<resources>
    <string name="app_name">NoteIt</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in_to_continue">Log In to Continue</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_sign_in_here">New User Sign In Here!</string>
    <string name="title">Title</string>
    <string name="type_here">Type Here</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="recover_account">Recover Account</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="go_back_to_login_screen">Go Back to Login Screen</string>
    <string name="tittle_displayed_here">Tittle displayed here</string>
    <string name="new_user">New User</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="want_to_login">Want to Login</string>
    <string name="this_is_your_developer">This is your Developer</string>
    <string name="your_code_appear_here">Your Code Appear Here</string>
</resources>