<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/centreLine"
        android:layout_width="375dp"
        android:layout_height="698dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        tools:layout_editor_absoluteX="20dp"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:id="@+id/linearLayoutLogin"
            android:layout_width="313dp"
            android:layout_height="133dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="475dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.286"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/welcome_back"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/log_in_to_continue"
                android:textColor="@color/teal_700"
                android:textSize="25sp" />


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="334dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="253dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="389dp" >

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="334dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="350dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="329dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="370dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="282dp"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="426dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="227dp"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/signInHereButton"
            android:layout_width="328dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="481dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="174dp"
            android:text="@string/new_user_sign_in_here" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBarOfMainActivity"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>