<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayoutForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="523dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.286"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/forgot_your_password"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/recover_account"
                android:textColor="@color/teal_700"
                android:textSize="25sp" />


        </LinearLayout>


        <EditText
            android:id="@+id/forgotPasswordEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="247dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="436dp"
            android:ems="10"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/forgotPasswordEmailButton"
            android:layout_width="349dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="356dp"
            android:text="@string/recover_account" />

        <TextView
            android:id="@+id/goBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:text="@string/go_back_to_login_screen"
            android:textAlignment="center"
            android:textSize="18sp">

        </TextView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>